    - a newline bug fixed in profiler.php
    - fixed auto_source_url variable bug in Config.php
    

- added public_folder item to config.php
- added _get_public_path() function to common.php file, updated head_tag and body_tag helper.  
- updated Config.php and url helper public_url() function.
    
//-----------------------------------------------------------------------------


@todolist
- add to userguide language and config file load changes, change the directory structure.
- add module() (url helper) function to userguide.
- loader::config('../welcome/config'); + loader::lang('../welcome/lang'); support .. 
- add $this->router->forward() method to userguide, change Global form control tutorial in userguide.
- added loader::lib('../api/php5/process'); support to userguide.

- check hmvc loop same class but different function (fixed)
- $this->router->forward('members/signup_step1/index'); (fixed)
- css functionality from modules  change it css(); (fixed)
- configuration folder for each modules.
- output cache folder for each modules.
- those 3 things. css/js checking modules first, bug in printing out blank link and folders in controllers (fixed) 
- check routes functionality for subfolders .. (fixed)
- restful http call hmvc, post, put, delete, get (fixed)  http://www.gen-x-design.com/archives/create-a-rest-api-with-php/  (fixed)
- add GET method support to subfolder urls. (fixed)
- add module library extend support, helper extend, model extend (in module directory !!)
- view nested data support (fixed)
- Change all Ssc:instance(); to base_register('Empty'); (fixed)
- this() function should be in current hmvc SCOPE. ( fixed.)
- hmvc cache test. ( fixed )


!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!
@todo .. multiple database active ercord.
@todo .. look log_message(); some functions does not work.
@todo .. add user guide to extending to Core MY_model functionality.
it works in Obullo !