@@ -6,26 +6,31 @@ Class Welcome extends Welcome_Controller {
     {   
         parent::__construct();
         // $this->output->profiler();
+        
+        // add database default
+        // $database['default'] = 'db';
+        loader::base_helper('hmvc');
     }           
     
     public function index()
-    {           
-        /*
-        $hmvc = hmvc_request('GET', 'welcome/welcome/_test', array('last' => 'me'));
+    {     
+print nl2br(ob_get_contents()); exit;
+    /*    
+        $hmvc = hmvc_request('GET', 'welcome/welcome/_test', array('last' => 'me'), 0);
         $result = $hmvc->exec()->response();
         
         echo $result;
-        */
-        
-        // echo $this->router->forward('welcome/welcome/_test');
-        
+    */  
         view_var('title', 'Welcome to Obullo Framework !');
         
         $data['var'] = 'and generated by ';
         
+        // view_var('body', view_render(array('layouts/view_header', 'view_left',   
+        // 'view_welcome', 'view_right', 'layouts/view_footer'), $data));
+ 
+        
         view_var('body', view('view_welcome', $data));
         view_layout('layout_welcome'); 
-        
     }
     
     
@@ -34,6 +39,11 @@ Class Welcome extends Welcome_Controller {
         view_var('title', 'sssssssss');
         
         $this->config->load('api');
+        
+        for($i=0; $i<=1000; $i++)
+        {
+            echo $i.',';
+        }
         
         echo 'test function works fine !';
     }
