@@ -113,6 +113,10 @@ works automatically from now on.
 
 
 @todolist
+- default db
+- add to userguide 
+view_var('body', view_render(array('layouts/view_header', 'view_left',   
+'view_welcome', 'view_right', 'layouts/view_footer'), $data));
 - add to userguide language and config file load changes, change the directory structure.
 - add module() (url helper) function to userguide.
 - loader::config('../welcome/config'); + loader::lang('../welcome/lang'); support .. 
